draft: add benchmark/training/HTTP3 notes, fix stale refs
Machine specs and process topology in The setup, dictionary
training method, an HTTP/3 direction (unmeasured, QPACK-based).
Also fixes leftover pre-rename class names and a dead link to
the deleted docs/examples README. Dropped the security-section
addendum after review.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01JfFhPHFiZVEfKRFvKNzPm3